--- a/burgers_equation.ipynb
+++ b/burgers_equation.ipynb
@@ -203,15 +203,19 @@
     "ep = 1\n",
     "lhs_sampler = latin_hypercube_sampling(((0,1), (0,2*np.pi)), 100)\n",
     "\n",
-    "nrows = 2\n",
-    "ncols = 3\n",
-    "fig, axes = plt.subplots(nrows, ncols, figsize = (14, 8), subplot_kw={'projection': '3d'})\n",
+    "nrows = 4\n",
+    "ncols = 12\n",
+    "fig, axes = plt.subplots(nrows, ncols, figsize = (12, 4), subplot_kw={'projection': '3d'})\n",
     "X, T = np.meshgrid(x, t)\n",
     "\n",
     "for i, j in product(range(nrows), range(ncols)):\n",
     "    evol = evolve_burger(x, t, mu, ep, 'sine', lhs_sampler)\n",
     "    surf = axes[i, j].plot_surface(X, T, evol, cmap='viridis')\n",
     "    axes[i, j].view_init(elev=20, azim=-50)\n",
+    "    axes[i, j].tick_params(axis='both', which='both', bottom=False, top=False, left=False, right=False)\n",
+    "    axes[i, j].set_xticks([])\n",
+    "    axes[i, j].set_yticks([])\n",
+    "    axes[i, j].set_zticks([])\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
